2017-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-retrieve-url): Remove onload redirection stuff
	because w3m-retrieve now got to do it.

2017-10-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-url): Use https.
	(shimbun-mainichi-login-url): Remove query part.
	(shimbun-mainichi-logout-url): New variable.
	(shimbun-mainichi-login): Make it a user command.
	(shimbun-mainichi-logout): New user command.

2017-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-mainichi-login-url)
	(shimbun-mainichi-login-name)
	(shimbun-mainichi-login-password): New variables;
	do login if name and password are set.
	(shimbun-mainichi-get-headers-fuchisou): Update regexp.

2017-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-retrieve-url): Workaround: don't do redirection if
	the onload function name doesn't end with ".submit" ([emacs-w3m:12795]).

2017-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-verbose, shimbun-message-enable-logging)
	(shimbun-message): Doc fix.
	(shimbun-retrieve-url, shimbun-headers):
	Bind w3m-message-silent and w3m-verbose.

2017-08-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-retrieve-url): Parse a form in its page buffer.

2017-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-retrieve-url): Do onload redirection.
	[emacs-w3m:12787]

2016-08-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-asahi.el (shimbun-asahi-group-table, shimbun-asahi-get-headers):
	Make editorial group work again.
	(shimbun-asahi-clear-contents): Update article-end rexexp.

2017-07-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-break-long-japanese-lines): Abolish.
	* sb-asahi.el, sb-mainichi.el, sb-nikkansports.el, sb-nikkei.el,
	sb-yomiuri.el: Do.

2017-06-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mew-shimbun.el, nnshimbun.el, sb-geocrawler.el, sb-marc-aims.el,
	sb-slashdot-jp.el, sb-sourceforge-jp.el, sb-tigris.el, shimbun.el: