@@ -1,3 +1,7 @@
+2017-10-18  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sb-sankei.el (shimbun-sankei-clear-contents): Add a garbage filter.
+
 2017-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun.el (shimbun-retrieve-url): Remove onload redirection stuff
